# rustant-film

./: .gitignore  Cargo.toml  README.md  readme.md
setup-example/: font.sh  logo.sh  readme.md  sample.sh
src/: argument.rs  command.rs  info.rs  layout.rs  main.rs  server.rs  utility.rs
src/api/: state.rs
src/entity/: develop.rs  info.rs  mod.rs  padding.rs  position.rs
src/film/: logo.rs  mod.rs
src/film/paint/: blank.rs  bottom.rs  constant.rs  duel.rs  horizontal.rs  mod.rs  normal.rs  triangular.rs  vertical.rs
src/film/plot/: bottom.rs  constant.rs  mod.rs  normal.rs
src/utility/: decode.rs  font.rs  mod.rs
