[package]
name = "rustant-film"
version = "0.1.1"
authors = ["BlankZhu"]
edition = "2021"
description = "Add a instant film style layout to your photo by EXIF."
license = "Apache-2.0"
keywords = ["exif", "camera", "image", "film"]
homepage = "https://github.com/BlankZhu/rustant-film"
repository = "https://github.com/BlankZhu/rustant-film"
documentation = "https://docs.rs/rustant-film"
readme = "README.md"

[dependencies]
kamadak-exif = "0.6"
image = "0.25"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
clap = { version = "4.5.31", features = ["derive"] }
pretty_env_logger = "0.5"
log = "0.4.26"
tokio = { version = "1.44", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
bytes = "1.10.1"
tracing = "0.1.41"
tracing-attributes = "0.1.28"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tower-http = {version = "0.6.2", features = ["trace"]}

[profile.release]
codegen-units = 1
lto = true
